--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -9357,4 +9357,20 @@ section {
 #footer .credits {
   font-size: 13px; }
 
+main {
+  min-height: 90vh; }
+
+.profile span {
+  margin: 5px; }
+.profile .full {
+  display: block; }
+.profile .pre-info {
+  width: 150px;
+  display: inline-block; }
+.profile .info {
+  display: inline-block;
+  background: #dcdcdc;
+  width: calc(100% - 175px);
+  padding: 5px; }
+
 /*# sourceMappingURL=styles.css.map */
