--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -24,3 +24,13 @@ main {
     padding: 5px;
   }
 }
+.event{
+  &__image{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+  &__date{
+    float: right;
+  }
+}
