--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -485,19 +485,19 @@ progress {
 
 @media (min-width: 576px) {
   .container, .container-sm {
-    max-width: 540px; } }
+    max-width: 740px; } }
 @media (min-width: 768px) {
   .container, .container-sm, .container-md {
-    max-width: 720px; } }
+    max-width: 920px; } }
 @media (min-width: 992px) {
   .container, .container-sm, .container-md, .container-lg {
-    max-width: 960px; } }
+    max-width: 1160px; } }
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px; } }
+    max-width: 1440px; } }
 @media (min-width: 1400px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
-    max-width: 1320px; } }
+    max-width: 1520px; } }
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
@@ -8374,14 +8374,6 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #272829; }
 
-a {
-  color: #0563bb;
-  text-decoration: none; }
-
-a:hover {
-  color: #067ded;
-  text-decoration: none; }
-
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-family: "Raleway", sans-serif; }
 
@@ -8395,7 +8387,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #0d6efd;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -8432,7 +8424,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
+  border: 6px solid #0d6efd;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -8529,7 +8521,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     color: #fff; } }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
   color: #fff;
-  background: #0563bb; }
+  background: #0d6efd; }
 
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
   color: #fff; }
@@ -8570,7 +8562,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb; }
+  background-color: #0d6efd; }
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -8608,7 +8600,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-family: "Poppins", sans-serif; }
 
 #hero p span {
-  color: #0563bb;
+  color: #0d6efd;
   letter-spacing: 1px; }
 
 #hero .social-links {
@@ -8623,7 +8615,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   transition: 0.3s; }
 
 #hero .social-links a:hover {
-  color: #0563bb; }
+  color: #0d6efd; }
 
 @media (max-width: 992px) {
   #hero {
@@ -8673,7 +8665,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #0d6efd;
   bottom: 0;
   left: calc(50% - 20px); }
 
@@ -8703,7 +8695,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #0d6efd;
   line-height: 0; }
 
 .about .content p:last-child {
@@ -8726,7 +8718,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #0d6efd;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -8776,7 +8768,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #0563bb; }
+  background-color: #0d6efd; }
 
 /*--------------------------------------------------------------
 # Resume
@@ -8791,7 +8783,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #0d6efd;
   position: relative; }
 
 .resume .resume-item h4, .resume .resume-item .h4 {
@@ -8800,7 +8792,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #0d6efd;
   margin-bottom: 10px; }
 
 .resume .resume-item h5, .resume .resume-item .h5 {
@@ -8829,7 +8821,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #0563bb; }
+  border: 2px solid #0d6efd; }
 
 /*--------------------------------------------------------------
 # Portfolio
@@ -8859,7 +8851,7 @@ section {
   transition: all 0.3s ease-in-out; }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb; }
+  color: #0d6efd; }
 
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0; }
@@ -8986,10 +8978,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb; }
+  border: 1px solid #0d6efd; }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb; }
+  background-color: #0d6efd; }
 
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -9181,10 +9173,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb; }
+  border: 1px solid #0d6efd; }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb; }
+  background-color: #0d6efd; }
 
 @media (min-width: 992px) {
   .testimonials .testimonial-item p {
@@ -9198,7 +9190,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #0d6efd;
   float: left;
   width: 44px;
   height: 44px;
@@ -9226,7 +9218,7 @@ section {
   margin-top: 40px; }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #0563bb;
+  background: #0d6efd;
   color: #fff; }
 
 .contact .php-email-form {
@@ -9285,7 +9277,7 @@ section {
   padding: 10px 12px; }
 
 .contact .php-email-form button[type="submit"] {
-  background: #0563bb;
+  background: #0d6efd;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -9335,7 +9327,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
+  background: #0d6efd;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -9357,8 +9349,29 @@ section {
 #footer .credits {
   font-size: 13px; }
 
-main {
-  min-height: 90vh; }
+html {
+  background: #000;
+  transition: background-color 3s; }
+
+body {
+  display: none;
+  background: #000;
+  overflow: hidden;
+  margin: 1vw; }
+
+#header {
+  padding: calc(1vw + 15px); }
+
+main.container {
+  overflow-y: scroll;
+  height: calc(100vh - 2vw);
+  color: #fff; }
+
+.card {
+  color: #1d1d20; }
+
+main.container::-webkit-scrollbar {
+  width: 0px; }
 
 .profile span {
   margin: 5px; }
@@ -9379,5 +9392,8 @@ main {
   object-fit: cover; }
 .event__date {
   float: right; }
+
+select.btn {
+  height: 38px; }
 
 /*# sourceMappingURL=styles.css.map */
