--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -13,15 +13,6 @@ body {
   color: #272829;
 }
 
-a {
-  color: #0563bb;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #067ded;
-  text-decoration: none;
-}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
@@ -37,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #0d6efd;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -79,7 +70,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
+  border: 6px solid #0d6efd;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -204,7 +195,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
   color: #fff;
-  background: #0563bb;
+  background: #0d6efd;
 }
 
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
@@ -253,7 +244,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #0d6efd;
 }
 
 /*--------------------------------------------------------------
@@ -299,7 +290,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero p span {
-  color: #0563bb;
+  color: #0d6efd;
   letter-spacing: 1px;
 }
 
@@ -317,7 +308,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #0d6efd;
 }
 
 @media (max-width: 992px) {
@@ -375,7 +366,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #0d6efd;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -411,7 +402,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #0d6efd;
   line-height: 0;
 }
 
@@ -437,7 +428,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #0d6efd;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -494,7 +485,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #0563bb;
+  background-color: #0d6efd;
 }
 
 /*--------------------------------------------------------------
@@ -511,7 +502,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #0d6efd;
   position: relative;
 }
 
@@ -521,7 +512,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #0d6efd;
   margin-bottom: 10px;
 }
 
@@ -555,7 +546,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #0563bb;
+  border: 2px solid #0d6efd;
 }
 
 /*--------------------------------------------------------------
@@ -589,7 +580,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #0d6efd;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -735,11 +726,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #0d6efd;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #0d6efd;
 }
 
 .portfolio-details .portfolio-info {
@@ -976,11 +967,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #0d6efd;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #0d6efd;
 }
 
 @media (min-width: 992px) {
@@ -999,7 +990,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #0d6efd;
   float: left;
   width: 44px;
   height: 44px;
@@ -1031,7 +1022,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #0563bb;
+  background: #0d6efd;
   color: #fff;
 }
 
@@ -1101,7 +1092,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #0563bb;
+  background: #0d6efd;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1165,7 +1156,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
+  background: #0d6efd;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
